--- a/backend/package.json
+++ b/backend/package.json
@@ -16,15 +16,17 @@
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-qs": "^3.0.0",
+    "koa-static": "^5.0.0",
     "taskwarrior-lib": "^0.5.2"
   },
   "devDependencies": {
     "@types/koa": "^2.11.3",
+    "@types/koa__router": "^8.0.2",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-qs": "^2.0.0",
     "@types/koa-router": "^7.4.1",
-    "@types/koa__router": "^8.0.2",
+    "@types/koa-static": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.3.1",
